--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "expo-constants": "~9.3.3",
     "expo-file-system": "~9.3.0",
     "expo-gl": "~9.2.0",
-    "expo-image-picker": "~9.2.0",
     "expo-permissions": "~10.0.0",
     "expo-status-bar": "~1.0.3",
     "jpeg-js": "^0.4.2",
@@ -33,7 +32,8 @@
     "react-native-screens": "~2.15.0",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.3",
-    "react-navigation-stack": "^2.10.2"
+    "react-navigation-stack": "^2.10.2",
+    "expo-image-manipulator": "~8.4.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
